# projectX_windows

./: .gitignore  API_RESPOND.cpp  CMakeCache.txt  CMakeLists.txt  MOD_SERVER.cpp  README.md  main.cpp  main.h  main_blub.cxx.backup  projectX_CLI.exp  projectX_windows.code-workspace  randKey.txt
ProjectX_WIN_UI/: ProjectX_WIN_UI.sln
ProjectX_WIN_UI/ProjectX_WIN_UI/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs
UI/: UI_MAIN.cpp  UI_MAIN.h
